kustomize/mautic-5/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautic-5-deployment
  labels:
    app: mautic-5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mautic-5
  template:
    metadata:
      labels:
        app: mautic-5
    spec:
      containers:
        - name: mautic-5
          image: mautic/mautic:5.1.1-fpm
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 2000Mi
              cpu: 1000m
            limits:
              memory: 2000Mi
              cpu: 1000m
