kustomize/mautic-5/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mautic-5
  labels:
    app: mautic-5
spec:
  serviceName: mautic-5-sfc
  selector:
    matchLabels:
      app: mautic-5
  template:
    metadata:
      labels:
        app: mautic-5
    spec:
      containers:
        - name: mautic-5
          image: mautic/mautic:5.1.1-apache
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 1000Mi
              cpu: 500m
            limits:
              memory: 2000Mi
              cpu: 1000m
          volumeMounts:
            - mountPath: /var/www/html/docroot/media
              name: mautic-5-static
              subPath: media
            - mountPath: /var/www/html/var/logs
              name: mautic-5-static
              subPath: logs
            - mountPath: /var/www/html/config
              name: mautic-5-static
              subPath: config
      volumes:
        - name: mautic-5-static
          persistentVolumeClaim:
            claimName: mautic-5-volumeclaim

  volumeClaimTemplates:
    - kind: PersistentVolumeClaim
      apiVersion: v1
      metadata:
        name: mautic-5-static
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: scw-bssd-retain
        resources:
          requests:
            storage: "1Gi"
