kustomize/mautic-5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mautic-5
spec:
  selector:
    app: mautic-5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
