kustomize/mautic-5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mautic-5
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mautic.djnd.si
      secretName: mautic-5-tls
  rules:
    - host: mautic.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mautic-5
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mautic-redirect
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($request_uri !~* ^/.well-known) {
        return 301 https://mautic.djnd.si$request_uri;
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mautic.lb.djnd.si
      secretName: mautic-redirect-tls
  rules:
    - host: mautic.lb.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mautic-5
                port:
                  number: 80
